Volver a: TE AMA MUCHO TU AMORCITO

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <!-- Botón para descubrir el video -->
     <section class="discover-section">
         <div class="container">
-            <h2>TE AMO MUCHO TU AMORCITO</h2>
+            <h2>TE AMA MUCHO TU AMORCITO</h2>
             <div class="heart-animation">♥</div>
             <p class="discover-text">Descubre todos nuestros momentos juntos</p>
             <button class="discover-btn" id="discoverBtn">
